ci.yml checking jmx file existance

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
                 
-      # - name: Check files existence 
-      #   id: file-existance
-      #   run: |
-      #     test -e ./ci/RickAndMorthyAPI.jmx && export JMX_FILE="true" || export JMX_FILE="false"
+      - name: Check files existence 
+        id: file-existance
+        run: |
+          pwd
+          test -e ./jmeter/RickAndMorthyAPI.jmx && export JMX_FILE="true" || export JMX_FILE="false"
+          echo $JMX_FILE
       #   #  test -e ./ci/bot_1000.csv && export CSV_FILE="true" || export CSV_FILE="false"
 
       # - name: Create Config File
