--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,11 @@ jobs:
         id: file-existance
         run: |
           pwd
-          test -e ./jmeter/RickAndMorthyAPI.jmx && export JMX_FILE="true" || export JMX_FILE="false"
-          echo $JMX_FILE
+          test -e /home/runner/work/performance_test/jmeter/RickAndMorthyAPI.jmx && export JMX_FILE="false" || export JMX_FILE="true"
+          if [echo $JMX_FILE]
+          then 
+            exit 1
+          fi
       #   #  test -e ./ci/bot_1000.csv && export CSV_FILE="true" || export CSV_FILE="false"
 
       # - name: Create Config File
