ci.yml checking jmx file existance

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         id: file-existance
         run: |
           pwd
-          test -e /home/runner/work/performance_test/jmeter/RickAndMorthyAPI.jmx && export JMX_FILE="false" || export JMX_FILE="true"
+          test -e /home/runner/work/performance_test/jmeter/RickAndMorthyAPI.jmx && export JMX_FILE="true" || export JMX_FILE="false"
           if [[ ${JMX_FILE} ]]
           then 
             exit 1
