ci.yml checking jmx file existance

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,8 @@ jobs:
         run: |
           pwd
           test -e /home/runner/work/performance_test/jmeter/RickAndMorthyAPI.jmx && export JMX_FILE="true" || export JMX_FILE="false"
-          if [[ ${JMX_FILE} ]]
-          then 
-            exit 1
-          fi
+          echo $JMX_FILE
+          if [[ ${JMX_FILE} ]] ; then exit 1;
       #   #  test -e ./ci/bot_1000.csv && export CSV_FILE="true" || export CSV_FILE="false"
 
       # - name: Create Config File
