ci.yml checking jmx file existance

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           pwd
           test -e /home/runner/work/performance_test/performance_test/jmeter/RickAndMorthyAPI.jmx && export JMX_FILE="true" || export JMX_FILE="false"
           echo $JMX_FILE
-          if [[ !${JMX_FILE} ]] ; 
+          if ! [[ ${JMX_FILE} ]] ; 
           then 
             echo "you should get here..."
             exit 1
