--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Deploy load test to AWS distribute load test
+name: Deploy performance test to AWS distribute load test
 
 on:
   workflow_dispatch:
@@ -37,14 +37,13 @@ jobs:
 
       - name: Create Config File
         run: |
-          export BRANCH_NAME=$(echo $GITHUB_SHA)
+          export BRANCH_NAME=$(echo $GITHUB_REF | cut -d'/' -f 3)
           export SCRIPT_NAME="${BRANCH_NAME}.jmx"
           cd jmeter
           cat template.json \
           | jq ".testId |= \"$BRANCH_NAME\"" \
           | jq ".testName |= \"$BRANCH_NAME\""  \
           | jq ".testScenario.scenarios.CIPipeline.script |= \"$SCRIPT_NAME\"" >> config.json
-          cat template.json
           cat config.json
 
       # - name: Create ZIP and upload it to s3
@@ -55,6 +54,6 @@ jobs:
       #     zip -r $BRANCH_NAME .        
       #     aws s3 cp ./$ZIP_NAME s3://distributed-loadt-test-dlttestrunnerstoragedltsce-h6q4dml6oxjh/public/test-scenarios/jmeter/
       
-      # - name: Deploy and run test into AWS distributed load test 
-      #   run: |
-      #     aws apigateway test-invoke-method --rest-api-id j7j4l7kyr6 --resource-id mm7o31 --http-method POST --path-with-query-string '/scenarios' --body file://config.json
+      - name: Deploy and run test into AWS distributed load test 
+        run: |
+          aws apigateway test-invoke-method --rest-api-id j7j4l7kyr6 --resource-id mm7o31 --http-method POST --path-with-query-string '/scenarios' --body file://config.json
