--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Create Config File and deploy test to distributed load test
         run: |
-          export BRANCH_NAME=$(echo $GITHUB_REF | cut -d'/' -f 3)
+          export BRANCH_NAME=$(echo $GITHUB_SHA | cut -d'/' -f 8)
           export SCRIPT_NAME="${BRANCH_NAME}.jmx"
           cd jmeter
           cat template.json \
