--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,13 +33,18 @@ jobs:
           then 
             echo "you shouldn't get here..."
             exit 1
-          fi
+          fi   
 
       - name: Create Config File and deploy test to distributed load test
         run: |
-          export BRANCH_NAME=$(echo $GITHUB_SHA | cut -d'/' -f 8)
+          export BRANCH_NAME=$(echo $GITHUB_SHA | cut -d'/' -f 12)
           export SCRIPT_NAME="${BRANCH_NAME}.jmx"
+
           cd jmeter
+          mv RickAndMorthyAPI.jmx $SCRIPT_NAME
+
+          aws s3 cp ./$SCRIPT_NAME s3://distributed-loadt-test-dlttestrunnerstoragedltsce-h6q4dml6oxjh/public/test-scenarios/jmeter/
+          
           cat template.json \
           | jq ".testId |= \"$BRANCH_NAME\"" \
           | jq ".testName |= \"$BRANCH_NAME\""  \
@@ -48,14 +53,7 @@ jobs:
           aws apigateway test-invoke-method --rest-api-id j7j4l7kyr6 --resource-id mm7o31 --http-method POST --path-with-query-string '/scenarios' --body file://config.json
 
 
-      # - name: Create ZIP and upload it to s3
-      #   run: |
-      #     export BRANCH_NAME=$(echo $GITHUB_SHA)
-      #     export ZIP_NAME="${BRANCH_NAME}.zip"
-      #     cd ci
-      #     zip -r $BRANCH_NAME .        
-      #     aws s3 cp ./$ZIP_NAME s3://distributed-loadt-test-dlttestrunnerstoragedltsce-h6q4dml6oxjh/public/test-scenarios/jmeter/
-      
+
       # - name: Deploy and run test into AWS distributed load test 
       #   run: |
       #     aws apigateway test-invoke-method --rest-api-id j7j4l7kyr6 --resource-id mm7o31 --http-method POST --path-with-query-string '/scenarios' --body file://config.json
