workflow changed to manual trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: Deploy performance test to AWS distribute load test
 
+on:
+  workflow_dispatch:
+
 #     paths-ignore:
 #       - '.github/**'
 jobs:
