--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Create Config File and deploy test to distributed load test
         run: |
-          export BRANCH_NAME=$(echo $GITHUB_SHA | cut -d'/' -f 8)
+          export BRANCH_NAME=$(echo $GITHUB_SHA | cut -d'' -f 8)
           export SCRIPT_NAME="${BRANCH_NAME}.jmx"
 
           cd jmeter
@@ -44,7 +44,7 @@ jobs:
           sleep 2
 
           cat template.json \
-          | jq ".testId |= \"$BRANCH_NAME\"" \
+          | jq ".testId |= \"RickAndMorthyAPI\"" \
           | jq ".testName |= \"RickAndMorthyAPI\"" \
           | jq ".testScenario.scenarios.CIPipeline.script |= \"RickAndMorthyAPI.jmx\"" >> config.json
           cat config.json
